# ksw_Quiz

./: README.md  pyproject.toml
quiz/: README.md
quiz/account/: serializers.py  urls.py  views.py
quiz/account/migrations/: 0001_initial.py  0002_delete_user.py
quiz/exam/: models.py  urls.py  views.py
quiz/quiz/: .env  settings.py  urls.py
quiz/quiz_board/: apps.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
quiz/quiz_manager/: apps.py  models.py  serializers.py  urls.py  views.py
